[gd_scene load_steps=3 format=3 uid="uid://cv0o0shblpr6r"]

[ext_resource type="Script" uid="uid://dx318mq5phlde" path="res://Actors/Enemies/Cannon/cannon_enemy.gd" id="1_ksc37"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bfv8t"]

[node name="CannonEnemy" type="Node2D" groups=["enemies"]]
z_index = -1
script = ExtResource("1_ksc37")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_bfv8t")

[node name="Barrel" type="Node2D" parent="."]

[node name="Barrel" type="Node2D" parent="Barrel"]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="DisableTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Firerate" type="Timer" parent="."]
wait_time = 2.0

[connection signal="draw" from="Barrel/Barrel" to="." method="_on_barrel_draw"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="DisableTimer" to="." method="_on_disable_timer_timeout"]
[connection signal="timeout" from="Firerate" to="." method="fire_bullet"]
